optimize: 优化代码结构使客户端和服务端分离

--- a/src/main/resources/quickfixj-client.cfg
+++ b/src/main/resources/quickfixj-client.cfg
@@ -8,6 +8,7 @@ HeartBtInt=5
 ReconnectInterval=5
 FileLogPath=logs-client
 ; SocketUseSSL=Y
+ScreenLogShowHeartBeats=N
 
 [session]
 BeginString=FIX.4.1
