--- a/src/main/resources/quickfixj-server.cfg
+++ b/src/main/resources/quickfixj-server.cfg
@@ -7,8 +7,7 @@ HeartBtInt=5
 ReconnectInterval=5
 FileLogPath=logs-server
 ; SocketUseSSL=Y
-UseDataDictionary=Y
-DataDictionary=./messages/FIX42.xml
+ScreenLogShowHeartBeats=N
 
 [session]
 BeginString=FIX.4.1
